--- a/assets/style.css
+++ b/assets/style.css
@@ -31,11 +31,11 @@ header {
 }
 
 .card {
-  background-color: hsl(0, 0%, 100%);
+  background-color: hsla(0, 0%, 0%, 0.596);
   border-radius: 5px;
   border-width: 1px;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
-  color: hsl(206, 17%, 28%);
+  color: hsl(0, 0%, 100%);
   font-size: 18px;
   margin: 0 auto;
   max-width: 800px;
@@ -112,7 +112,7 @@ button[disabled] {
   text-align: center;
   margin-top: 10px;
   margin-bottom: 10px;
-  border: 2px dashed #c0c7cf;
+  border: 2px dashed #8b0606cc;
   border-radius: 6px;
   resize: none;
   overflow: hidden;
